----------------------------------------------------------------------
 OmegaT 3.1.4 
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
3.1.4 update 1 vs. 3.1.4

  Implemented requests:

  - Load alternative translations from external TMXs created by OmegaT
  https://sourceforge.net/p/omegat/feature-requests/783/

  Bug fixes:

  - Pane headline missing using the Windows classic theme
  https://sourceforge.net/p/omegat/bugs/697/

----------------------------------------------------------------------
 OmegaT 3.1.4 (2014-07-28)
----------------------------------------------------------------------
  12 Enhancements
   2 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.4 vs. 3.1.3

  Implemented requests:

  - Enable Check whole project by default in check_rules.groovy 
  https://sourceforge.net/p/omegat/feature-requests/1012/

  - Don't save location of projects opened via command line
  https://sourceforge.net/p/omegat/feature-requests/1010/

  - Select the matching percentage on which to base the match ordering
  https://sourceforge.net/p/omegat/feature-requests/847/

  - Select folders and files to ignore in the source folder 
  https://sourceforge.net/p/omegat/feature-requests/954/

  Other enhancements:

  - Improve combo box look and feel on OS X

  - SVNKit updated to 1.8.5. Team projects created previously will continue 
to work normally with OmegaT. However, if you want to use SVN tools to manage a 
project created with OmegaT 3.1.4 (e.g., commit new source files), you have 
to use a compatible tool (e.g., Tortoise SVN 1.8.7). If you want to manage
with such a tool projects created previously, you have to perform an SVN Upgrade 
Copy. Once this is done, the working copy can no longer be managed with a 1.7 SVN 
tool or OmegaT 3.1.3.
